--- a/index.html
+++ b/index.html
@@ -9,7 +9,33 @@
 	<link rel="stylesheet" href=".css">
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 </head>
-
+<nav id="nav_menu">
+	<ul>
+		<li><a href="../index.html" class="current">Home</a></li>
+		<li><a href="#">Genres</a>
+			<ul>
+				<li><a href="#">Upcoming</a></li>
+				<li><a href="#">Past</a></li>
+			</ul>
+		</li>
+		<li><a href="#">Luncheons</a></li>
+		<li><a href="#">Tickets</a>
+			<ul>
+				<li><a href="#">Season Package</a></li>
+				<li><a href="#">Patron Package</a></li>
+				<li><a href="#">Single Speaker</a></li>
+			</ul>
+		</li>
+		<li><a href="#">About Us</a>
+			<ul>
+				<li><a href="#">Our History</a></li>
+				<li><a href="#">Board of Directors</a></li>
+				<li><a href="#">Past Speakers</a></li>
+				<li><a href="#">Contact Information</a></li>
+			</ul>
+		</li>
+	</ul>
+</nav>
 <body>
 	<header>
 		
