--- a/index.html
+++ b/index.html
@@ -12,26 +12,21 @@
 <nav id="nav_menu">
 	<ul>
 		<li><a href="../index.html" class="current">Home</a></li>
-		<li><a href="#">Genres</a>
-			<ul>
-				<li><a href="#">Upcoming</a></li>
-				<li><a href="#">Past</a></li>
-			</ul>
-		</li>
-		<li><a href="#">Luncheons</a></li>
-		<li><a href="#">Tickets</a>
-			<ul>
-				<li><a href="#">Season Package</a></li>
-				<li><a href="#">Patron Package</a></li>
-				<li><a href="#">Single Speaker</a></li>
-			</ul>
-		</li>
+		<li><a href="#">Genres</a></li>
+		<li><a href="#">Languages</a></li>
+		<ul>
+			<li><a href="#">Hot</a></li>
+			<li><a href="#">Past</a></li>
+			<li><a href="#">Hot</a></li>
+			<li><a href="#">Past</a></li>
+			<li><a href="#">Hot</a></li>
+			<li><a href="#">Past</a></li>
+		</ul>
+		<li><a href="#">Login/Signup</a></li>
 		<li><a href="#">About Us</a>
 			<ul>
-				<li><a href="#">Our History</a></li>
-				<li><a href="#">Board of Directors</a></li>
-				<li><a href="#">Past Speakers</a></li>
-				<li><a href="#">Contact Information</a></li>
+				<li><a href="#">What is GrooveFinder</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</li>
 	</ul>
