--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta charset="utf-8">
 	<title></title>
 	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="styles/normalize.css">
-	<link rel="stylesheet" href=".css">
+	<link rel="stylesheet" href="styles/main.css">
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 </head>
 <nav id="nav_menu">
@@ -15,33 +14,35 @@
 		<li><a href="#">Genres</a></li>
 		<li><a href="#">Languages</a></li>
 		<ul>
-			<li><a href="#">Hot</a></li>
-			<li><a href="#">Past</a></li>
-			<li><a href="#">Hot</a></li>
-			<li><a href="#">Past</a></li>
-			<li><a href="#">Hot</a></li>
-			<li><a href="#">Past</a></li>
+			<li><a class="lang lang-en>English</a></li>
+			<li><a class=" lang lang-en>Espanol</a></li>
+			<li><a class="lang lang-en>French</a></li>
+			<li><a href=" #">Dutch</a></li>
+			<li><a href="#">Chinese</a></li>
+			<li><a href="#">Italian</a></li>
 		</ul>
 		<li><a href="#">Login/Signup</a></li>
 		<li><a href="#">About Us</a>
 			<ul>
-				<li><a href="#">What is GrooveFinder</a></li>
+				<li><a href="#">What is GrooveFinder?</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</li>
 	</ul>
 </nav>
-<body>
-	<header>
-		
-	</header>
 
-	<section>
-		
-	</section>						
-	
-	<footer>
-		
-	</footer>
-</body>
-</html>
+<body>
+	<div class="content">
+		<div class="left-col">
+			<h1>MY <br> SOUNDS</h1>
+		</div>
+
+		<div class="right-col">
+
+			<p>Click Here To Listen</p>
+
+			<img src="media/play.png" id="icon">
+		</div>
+	</div>
+</body >
+</html >
