--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles/main.css">
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 </head>
-<nav id="nav_menu">
+<nav id="nav">
 	<ul>
 		<li><a href="../index.html" class="current">Home</a></li>
 		<li><a href="#">Genres</a></li>
