--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 		<li><a href="#">Genres</a></li>
 		<li><a href="#">Languages</a></li>
 		<ul>
-			<li><a class="lang lang-en>English</a></li>
-			<li><a class=" lang lang-en>Espanol</a></li>
-			<li><a class="lang lang-en>French</a></li>
-			<li><a href=" #">Dutch</a></li>
-			<li><a href="#">Chinese</a></li>
-			<li><a href="#">Italian</a></li>
+			<button onclick="changeLanguage('eng')">
+				Change to English</button>
+			<button onclick="changeLanguage('es')">
+				Change to Spanish
+			</button>
+			<button onclick="changeLanguage('hin')">
+				Change to Hindi
+			</button>
 		</ul>
 		<li><a href="#">Login/Signup</a></li>
 		<li><a href="#">About Us</a>
