--- a/index.html
+++ b/index.html
@@ -7,45 +7,27 @@
 	<title>GrooveFinder</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/main.css">
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 </head>
-<nav id="nav">
-	<ul>
-		<li><a href="../index.html" class="current">Home</a></li>
-		<li><a href="#">Genres</a></li>
-		<li><a href="#">Languages</a></li>
-		<ul>
-			<button onclick="changeLanguage('eng')">
-				Change to English</button>
-			<button onclick="changeLanguage('es')">
-				Change to Spanish
-			</button>
-			<button onclick="changeLanguage('hin')">
-				Change to Hindi
-			</button>
-		</ul>
-		<li><a href="#">Login/Signup</a></li>
-		<li><a href="#">About Us</a>
-			<ul>
-				<li><a href="#">What is GrooveFinder?</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</li>
-	</ul>
-</nav>
 
 <body>
-	<div class="content">
-		<div class="left-col">
-			<h1>MY <br> SOUNDS</h1>
-		</div>
+	<header> <img src="images/town_hall_logo.gif" alt="GrooveFinder Logo" height="80">
+		<h2>GrooveFinder</h2>
+		<h3>Where music finds You</h3>
+	</header>
+	<nav id="nav">
+		<ul>
+			<li><a href="../index.html" class="current">Home</a></li>
+			<li><a href="links/genre.html">Genres</a></li>
+			<li><a href="#">Languages</a></li>
+			<li><a href="links/login.html">Login/Signup</a></li>
+			<li><a href="#">About Us</a>
+				<ul>
+					<li><a href="#">What is GrooveFinder?</a></li>
+					<li><a href="links/contact.html">Contact</a></li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
+</body>
 
-		<div class="right-col">
-
-			<p>Click Here To Listen</p>
-
-			<img src="media/play.png" id="icon">
-		</div>
-	</div>
-</body >
-</html >
+</html>
