--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<header> <img src="images/town_hall_logo.gif" alt="GrooveFinder Logo" height="80">
+	<header> <img src="images/sitelogo.jpg" alt="GrooveFinder Logo" height="80">
 		<h2>GrooveFinder</h2>
 		<h3>Where music finds You</h3>
 	</header>
