--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- DEVELOPER: Emmanuel Lawal, IS117-004, Spring 2024 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -27,9 +28,9 @@
 				<li class="navbar_item"><a href="#" class="navbar_links">Languages</a></li>
 				<li class="navbar_btn"><a href="links/login.html" class="button">Login/Signup</a></li>
 				<li class="navbar_item"><a href="#" class="navbar_links">About Us</a>
-					<ul>
+					<ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 						<li><a href="#">What is GrooveFinder?</a></li>
-						<li><a href="links/contact.html">Contact</a></li>
+						<li class="navbar_item"><a href="links/contact.html">Contact</a></li>
 					</ul>
 				</li>
 			</ul>
