--- a/index.html
+++ b/index.html
@@ -1,41 +1,335 @@
 <!-- DEVELOPER: Emmanuel Lawal, IS117-004, Spring 2024 -->
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>GrooveFinder</title>
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>GrooveFinder</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="stylesheet" href="styles/main.css">
-</head>
+  <body>
+    <header>
+      <div class="menu_side">
+        <h1>Playlist</h1>
+        <div class="playlist">
+          <h4 class="active">
+            <span></span><i class="bi bi-music-note-beamed"></i> Playlist
+          </h4>
+          <h4>
+            <span></span><i class="bi bi-music-note-beamed"></i> Last Listening
+          </h4>
+          <h4>
+            <span></span><i class="bi bi-music-note-beamed"></i> Recommended
+          </h4>
+        </div>
+        <div class="menu_song">
+          <li class="songItem">
+            <span>01</span>
+            <img src="img/1.jpg" alt="Daniel" />
+            <h5>
+              Freudian
+              <div class="subtitle">Daniel Caesar</div>
+            </h5>
+            <i class="bi playListPlay bi-play-circle-fill" id="1"></i>
+          </li>
+          <li class="songItem">
+            <span>02</span>
+            <img src="img/2.jpg" alt="Future" />
+            <h5>
+              On My Way
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+            <i class="bi playListPlay bi-play-circle-fill" id="2"></i>
+          </li>
+          <li class="songItem">
+            <span>03</span>
+            <img src="img/3.jpg" alt="Alan" />
+            <h5>
+              On My Way
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+            <i class="bi playListPlay bi-play-circle-fill" id="3"></i>
+          </li>
+          <li class="songItem">
+            <span>04</span>
+            <img src="img/1.jpg" alt="Alan" />
+            <h5>
+              On My Way
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+            <i class="bi playListPlay bi-play-circle-fill" id="4"></i>
+          </li>
+          <li class="songItem">
+            <span>05</span>
+            <img src="img/1.jpg" alt="Alan" />
+            <h5>
+              On My Way
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+            <i class="bi playListPlay bi-play-circle-fill" id="5"></i>
+          </li>
+          <li class="songItem">
+            <span>06</span>
+            <img src="img/1.jpg" alt="Alan" />
+            <h5>
+              On My Way
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+            <i class="bi playListPlay bi-play-circle-fill" id="6"></i>
+          </li>
+        </div>
+      </div>
 
-<body>
-	<header> <img src="images/sitelogo.jpg" alt="GrooveFinder Logo" height="80">
-		<h3>Where music finds You</h3>
-	</header>
-	<nav class="navbar">
-		<div class="navbar_container">
-			<a href="index.html" id="navbar_logo">GrooveFinder</a>
-			<div class="navbar_toggle" id="mobile-menu">
-				<span class="bar"></span>
-				<span class="bar"></span>
-				<span class="bar"></span>
-			</div>
-			<ul class="navbar_menu">
-				<li class="navbar_item"><a href="../index.html" class="navbar_links">Home</a></li>
-				<li class="navbar_item"><a href="links/genre.html" class="navbar_links">Genres</a></li>
-				<li class="navbar_item"><a href="#" class="navbar_links">Languages</a></li>
-				<li class="navbar_btn"><a href="links/login.html" class="button">Login/Signup</a></li>
-				<li class="navbar_item"><a href="#" class="navbar_links">About Us</a>
-					<ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
-						<li><a href="#">What is GrooveFinder?</a></li>
-						<li class="navbar_item"><a href="links/contact.html">Contact</a></li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-	</nav>
-</body>
+      <div class="song_side">
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a href="index.html">Home<span></span></a></li>
+            <li><a href="#">Top Genres</a></li>
+            <li class="dropdown"><a href="about.html">About</a>
+              <ul>
+                <li><a href="contact.html" class="active">Contact</a></li>
+              </ul>
+           <!-- <li><a href="home1.html">UPDATEHOME</a></li> -->
+          </ul>
+          <div class="search">
+            <i class="bi bi-search"></i>
+            <input type="text" placeholder="Search Music..." />
+          </div>
+          <div class="user">
+            <img src="img/sitelogo.jpg" alt="User" title="User Profile" />
+          </div>
+        <!-- <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>-->
+        </nav>
+        <div class="content">
+          <h1>Alen Walker-Fade</h1>
+          <p>
+            You were the shadow to my light Did you feel us Another start You
+            fade
+            <br />
+            Away afraid our aim is out of sight Wanna see us Alive
+          </p>
+          <div class="buttons">
+            <button>PLAY</button>
+            <button>FOLLOW</button>
+          </div>
+        </div>
+        <div class="popular_song">
+          <div class="h4">
+            <h4>
+              Popular Songs
+              <div class="subtitle">Updated Every Month</div>
+            </h4>
+            <div class="btn_s">
+              <i id="left_scroll" class="bi bi-arrow-left-short"></i>
+              <i id="right_scroll" class="bi bi-arrow-right-short"></i>
+            </div>
+          </div>
+          <div class="pop_song">
+            <li class="songItem">
+              <div class="img_play">
+                <img src="img/1.jpg" alt="alan" />
+                <i class="bi playListPlay bi-play-circle-fill" id="7"></i>
+              </div>
+              <h5>
+                On My Way
+                <br />
+                <div class="subtitle">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="img/1.jpg" alt="alan" />
+                <i class="bi playListPlay bi-play-circle-fill" id="8"></i>
+                <!-- change All id  -->
+              </div>
+              <h5>
+                On My Way
+                <br />
+                <div class="subtitle">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="img/1.jpg" alt="alan" />
+                <i class="bi playListPlay bi-play-circle-fill" id="9"></i>
+              </div>
+              <h5>
+                On My Way
+                <br />
+                <div class="subtitle">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="img/1.jpg" alt="alan" />
+                <i class="bi playListPlay bi-play-circle-fill" id="10"></i>
+              </div>
+              <h5>
+                On My Way
+                <br />
+                <div class="subtitle">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="img/1.jpg" alt="alan" />
+                <i class="bi playListPlay bi-play-circle-fill" id="11"></i>
+              </div>
+              <h5>
+                On My Way
+                <br />
+                <div class="subtitle">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="img/1.jpg" alt="alan" />
+                <i class="bi playListPlay bi-play-circle-fill" id="12"></i>
+              </div>
+              <h5>
+                On My Way
+                <br />
+                <div class="subtitle">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="img/1.jpg" alt="alan" />
+                <i class="bi playListPlay bi-play-circle-fill" id="13"></i>
+              </div>
+              <h5>
+                On My Way
+                <br />
+                <div class="subtitle">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="img/1.jpg" alt="alan" />
+                <i class="bi playListPlay bi-play-circle-fill" id="14"></i>
+              </div>
+              <h5>
+                On My Way
+                <br />
+                <div class="subtitle">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="img/1.jpg" alt="alan" />
+                <i class="bi playListPlay bi-play-circle-fill" id="15"></i>
+              </div>
+              <h5>
+                On My Way
+                <br />
+                <div class="subtitle">Alan Walker</div>
+              </h5>
+            </li>
+          </div>
+        </div>
+        <div class="popular_artists">
+          <div class="h4">
+            <h4>
+              Popular Artists <br />
+              <div class="subtitle">Updated Every Month</div>
+            </h4>
+            <div class="btn_s">
+              <i id="left_scrolls" class="bi bi-arrow-left-short"></i>
+              <i id="right_scrolls" class="bi bi-arrow-right-short"></i>
+            </div>
+          </div>
+          <div class="item">
+            <li>
+              <img src="img/queenb.jpg" alt="Beyonce" title="Beyonce" />
+            </li>
+            <li>
+              <img src="img/drake.jpg" alt="Drake" title="Drake" />
+            </li>
+            <li>
+              <img src="img/gunna.jpg" alt="Gunna" title="Gunna" />
+            </li>
+            <li>
+              <img src="img/gherbo.jpg" alt="G Herbo" title="G Herbo" />
+            </li>
+            <li>
+              <img src="img/dualipa.jpg" alt="Dua Lipa" title="Dua Lipa" />
+            </li>
+            <li>
+              <img src="img/future.jpg" alt="Future" title="Future" />
+            </li>
+            <li>
+              <img src="img/sade.jpg" alt="Sade" title="Sade" />
+            </li>
+            <li>
+              <img
+                src="img/benson.jpg"
+                alt="Benson Boone"
+                title="Benson Boone"
+              />
+            </li>
+            <li>
+              <img src="img/rodwave.jpg" alt="Rod Wave" title="Rod Wave" />
+            </li>
+            <li>
+              <img src="img/badbunny.jpg" alt="Bad Bunny" title="Bad Bunny" />
+            </li>
+            <li>
+              <img
+                src="img/taylor.jpg"
+                alt="Taylor Swift"
+                title="Taylor Swift"
+              />
+            </li>
+            <!-- change all img  -->
+          </div>
+        </div>
+      </div>
 
+      <div class="master_play">
+        <div class="wave">
+          <div class="wave1"></div>
+          <div class="wave1"></div>
+          <div class="wave1"></div>
+        </div>
+        <img src="img/26th.jpg" alt="Alan" id="poster_master_play" />
+        <h5 id="title">
+          MILLION DOLLAR BABY<br />
+          <div class="subtitle">Tommy Richman</div>
+        </h5>
+        <div class="icon">
+          <i class="bi bi-skip-start-fill" id="back"></i>
+          <i class="bi bi-play-fill" id="masterPlay"></i>
+          <i class="bi bi-skip-end-fill" id="next"></i>
+        </div>
+        <span id="currentStart">0:00</span>
+        <div class="bar">
+          <input type="range" id="seek" min="0" value="0" max="100" />
+          <div class="bar2" id="bar2"></div>
+          <div class="dot"></div>
+        </div>
+        <span id="currentEnd">0:00</span>
+
+        <div class="vol">
+          <i class="bi bi-volume-down-fill" id="vol_icon"></i>
+          <input type="range" id="vol" min="0" value="30" max="100" />
+          <div class="vol_bar"></div>
+          <div class="dot" id="vol_dot"></div>
+        </div>
+      </div>
+    </header>
+    <footer id="footer" class="footer">
+        <div class="container">
+          <div class="copyright">
+            <p>&copy; 2024, Emmanuel Lawal, IS117-004 All Rights Reserved </p>
+          </div>
+        </div>
+      </footer>
+    <script src="forms/app.js"></script>
+  </body>
 </html>
